# iso_iec_7064-rs

./: Cargo.toml  README.md
examples/: validate.rs
src/: alphabet.rs  hybrid.rs  lib.rs  mod_11_10.rs  mod_11_2.rs  mod_1271_36.rs  mod_27_26.rs  mod_37_2.rs  mod_37_36.rs  mod_661_26.rs  mod_97_10.rs  pure.rs  system.rs
