[package]
name = "iso_iec_7064"
version = "0.1.0"
description = "Support for check digit operations conforming to ISO/IEC 7064"
authors = ["Gregor Purdy <gregor@abcelo.com>"]
license = "MIT OR Apache-2.0"
keywords = ["checksum", "check-digit"]
readme = "README.md"
edition = "2021"
repository = "https://github.com/gnp/iso_iec_7064-rs.git"
include = []

[dependencies]
